--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>MapBox</title>
+		<title>Landing Locations</title>
 		<script src="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js"></script>
 		<script src="scripts/markers.js" defer></script>
 		<script src="scripts/main.js" defer></script>
